Archive/9478b525168b7fadba0828bb908e3d41-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:21:3: error: ‘parser’ was not declared in this scope
   parser.get_command(input);
   ^
main.cpp:26:34: error: ‘parser’ was not declared in this scope
     while(std::getline(std::cin, parser)) {
                                  ^
